# AutoHYU-Control-Personality

./: README.md  autohyu_cm.sh  autohyu_cm_personality.sh  autohyu_control.sh  install_dependency.sh  install_dependency_n_solver.sh  update_submodules.sh
config/: bsw.ini  calibration.ini  (+9 more)
src/app/control/acados_scc_control/: CMakeLists.txt  package.xml  setup.py
src/app/control/acados_scc_control/launch/: acados_scc_control.launch
src/app/control/acados_scc_control/scripts/: acados_scc_control_node.py
src/app/control/acados_scc_control/scripts/MPC/: NMPC_STM_acados_settings_kinematic.py  NMPC_class_kinematic.py  weights.ini
src/app/control/acados_scc_control/scripts/utils/: frenet_numba.py  trajectory_process.py
src/app/control/acados_scc_control/src/utils/: frenet.cpp
src/app/control/lateral_control/: CMakeLists.txt  package.xml
src/app/control/lateral_control/include/: lateral_control_config.hpp  lateral_control_node.hpp
src/app/control/lateral_control/include/lateral_control/: lateral_control.hpp
src/app/control/lateral_control/include/lateral_control/lateral_control_core/: lateral_control_interface.hpp
src/app/control/lateral_control/launch/: lateral_control.launch
src/app/control/lateral_control/scripts/lateral_kinematic_bicycle_nmpc/: lateral_kinematic_bicycle_nmpc.py
src/app/control/lateral_control/src/: lateral_control_node.cpp
src/app/control/lateral_control/src/lateral_control/: lateral_control.cpp
src/app/control/longitudinal_control/: CMakeLists.txt  package.xml
src/app/control/longitudinal_control/include/: longitudinal_control_config.hpp  longitudinal_control_node.hpp
src/app/control/longitudinal_control/include/longitudinal_control/: longitudinal_control.hpp
src/app/control/longitudinal_control/launch/: longitudinal_control.launch
src/app/control/longitudinal_control/src/: longitudinal_control_node.cpp
src/app/control/longitudinal_control/src/longitudinal_control/: longitudinal_control.cpp
src/app/control/personality_extraction/: CMakeLists.txt  package.xml  result.txt
src/app/control/personality_extraction/include/: personality_extraction_config.hpp  personality_time_window_node.hpp
src/app/control/personality_extraction/include/personality_extraction_algorithm/: data_aquisition.hpp  set_constraint.hpp
src/app/control/personality_extraction/launch/: personality_adjustment.launch  personality_bayesopt.launch  personality_time_window.launch
src/app/control/personality_extraction/scripts/: personality_adjustment_node.py  personality_weight_bayesopt_node.py
src/app/control/personality_extraction/src/: personality_time_window_node.cpp
src/app/control/personality_extraction/src/personality_extraction_algorithm/: data_aquisition.cpp  set_constraint.cpp
src/app/control/personality_extraction/src/utils/: frenet.cpp
src/app/control/tools/control_evaluation/: CMakeLists.txt  package.xml
src/app/control/tools/control_evaluation/launch/: control_evaluation.launch
src/app/control/tools/control_evaluation/scripts/: init_morai_pose.py  scenario_manager.py  trajectory_process.py
src/app/control/tools/model_validation/: CMakeLists.txt  README.md  package.xml
src/app/control/tools/model_validation/launch/: model_validation.launch
src/app/control/tools/model_validation/src/: model_validation.py  result_plot.py
src/app/localization/state_estimation/: CMakeLists.txt  package.xml
src/app/localization/state_estimation/include/: state_estimation_config.hpp  state_estimation_node.hpp
src/app/localization/state_estimation/include/state_using_novatel/: state_using_novatel_algorithm.hpp
src/app/localization/state_estimation/launch/: state_estimation.launch
src/app/localization/state_estimation/src/: state_estimation_node.cpp
src/app/localization/state_estimation/src/state_using_novatel/: state_using_novatel_algorithm.cpp
src/bsw/communication/can_parser/: CMakeLists.txt  package.xml
src/bsw/communication/can_parser/include/: can_parser_config.hpp  can_parser_node.hpp
src/bsw/communication/can_parser/launch/: can_parser.launch
src/bsw/communication/can_parser/src/: can_parser_node.cpp
src/bsw/simulator/carmaker_bridge/: CMakeLists.txt  package.xml
src/bsw/simulator/carmaker_bridge/include/object_driver/: object_driver_config.hpp  object_driver_node.hpp
src/bsw/simulator/carmaker_bridge/include/vehicle_control/: vehicle_control_config.hpp  vehicle_control_node.hpp
src/bsw/simulator/carmaker_bridge/include/vehicle_driver/: vehicle_driver_config.hpp  vehicle_driver_node.hpp
src/bsw/simulator/carmaker_bridge/launch/: bridge.launch  object_driver.launch  vehicle_control.launch  vehicle_driver.launch
src/bsw/simulator/carmaker_bridge/src/object_driver/: object_driver_node.cpp
src/bsw/simulator/carmaker_bridge/src/vehicle_control/: vehicle_control_node.cpp
src/bsw/simulator/carmaker_bridge/src/vehicle_driver/: vehicle_driver_node.cpp
src/rte/msg/autohyu_msgs/: CMakeLists.txt  package.xml
src/rte/msg/autohyu_msgs/msg/: BehaviorBoundaryPoint.msg  BehaviorTrajectories.msg  BehaviorTrajectory.msg  BehaviorTrajectoryPoint.msg  ControlInfo.msg  DetectObject2D.msg  DetectObject3D.msg  DetectObjects2D.msg  DetectObjects3D.msg  FrameFD.msg  GoalPoints.msg  Lanelet.msg  LaneletLine.msg  LaneletPath.msg  LaneletRelation.msg  LaneletRoute.msg  MapBin.msg  PredictObject.msg  PredictObjectMultimodal.msg  PredictObjects.msg  Reference.msg  TrackObject.msg  TrackObjects.msg  TrafficLight.msg  TrafficSign.msg  Trajectories.msg  Trajectory.msg  TrajectoryBoundary.msg  TrajectoryCost.msg  TrajectoryPoint.msg  VehicleCAN.msg  VehicleCmd.msg  VehicleState.msg
src/rte/msg/autohyu_msgs/srv/: MapBinSrv.srv
src/rte/msg/mobileye_msgs/: CMakeLists.txt  package.xml
src/rte/msg/mobileye_msgs/msg/: ADAS_DRV.msg  CMR_Genrl.msg  CMR_Lane.msg  CMR_Obj.msg  C_RDR.msg  C_RDR_Genrl.msg  LaneInfo.msg  ObjectState.msg  RDR.msg  RDR_Genrl.msg
src/rte/msg/personality_msgs/: CMakeLists.txt  package.xml
src/rte/msg/personality_msgs/msg/: PersonalityScene.msg  PersonalityScenePoint.msg  PersonalityTimeWindow.msg  Stats.msg
(+976 files in other folders)
