<?xml version="1.0"?>
<package format="2">
  <name>longitudinal_control</name>
  <version>0.0.0</version>
  <description>The longitudinal_control_node package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="yuseungna@hanyang.ac.kr">Yuseung.Na</maintainer>
  <maintainer email="jun998@konkuk.ac.kr">Junhee.Lee</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <license>TODO</license>

  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>can_msgs</build_depend>
  <build_depend>autohyu_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>can_msgs</build_export_depend>
  <build_export_depend>autohyu_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>can_msgs</exec_depend>
  <exec_depend>autohyu_msgs</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
