<?xml version="1.0"?>
<package format="2">
  <name>personality_extraction</name>
  <version>0.0.0</version>
  <description>The personality_extract_node package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="sunghoon8585@gmail.com">Seounghoon.Park</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <license>TODO</license>

  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>autohyu_msgs</build_depend>
  <build_depend>matplotlib_cpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>autohyu_msgs</build_export_depend>
  <build_export_depend>matplotlib_cpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>autohyu_msgs</exec_depend>
  <exec_depend>matplotlib_cpp</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
