<?xml version="1.0"?>
<package format="2">
  <name>personality_msgs</name>

  <version>1.0.0</version>

  <description>
      msg for personality bayesopt
  </description>

  <maintainer email="sunghoon8585@gmail.com">Delcoii</maintainer>
  
  <license>MIT</license>

  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>

</package>
